WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221016
REGRESSION (
r268947
) Some table elements become blank when scroll-bar is toggled
https://bugs.webkit.org/show_bug.cgi?id=221016
Summary
REGRESSION (r268947) Some table elements become blank when scroll-bar is toggled
Simon Fraser (smfr)
Reported
2021-01-26 15:50:36 PST
REGRESSION (
r268947
) Some table elements become blank when scroll-bar is toggled
Attachments
Patch
(15.20 KB, patch)
2021-01-26 15:53 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-01-26 15:53:41 PST
Created
attachment 418483
[details]
Patch
EWS
Comment 2
2021-01-26 20:57:01 PST
Committed
r271933
: <
https://trac.webkit.org/changeset/271933
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418483
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-01-26 20:58:13 PST
<
rdar://problem/73646521
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug